--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>Wordle PPY</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
@@ -12,14 +13,7 @@
     <input type="text" id="guess-input">
     <button id="guess-button">Intentar</button>
     <div id="wordle">
-        <div class="grid">
-            <div class="contenedor">
-                <span class='letter'> </span>
-                <span class='letter'> </span>
-                <span class='letter'> </span>
-                <span class='letter'> </span>
-                <span class='letter'> </span>
-            </div>
+        <div id="grid">
         </div>
         <div class="mensajes">
         </div>
